Fix picture/caption alignment

--- a/src/pages/css/glob-content.css
+++ b/src/pages/css/glob-content.css
@@ -78,18 +78,25 @@
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		margin-top: 1em;
+		margin-bottom: 1em;
 		max-width: 80%;
+		text-align:center;
+}
+.image-container > .centered
+{
+	text-align: left;
+	display: inline-block;
 }
 
 .theater-image
 {
 		height: auto;
-		margin-top: 0.5em;
 		border: 4px #686868 solid;
 		border-radius: 16px;
 }
 
-.image-container > .caption
+.image-container  .caption
 {
 		margin-left: 28px;
 		/*margin-right: 28px;*/
